--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1,5 +1,15 @@
+@font-face{
+	font-family: Lobster;
+	src: url('../fonts/lobster/lobster.otf');
+}
+
+h1,h2,h3,h4,h5,h6{
+	font-family: Lobster;
+}
+
 body{
-	background: #9C2765
+	/*background: #9C2765; */
+	background: #D0006E;
 }
 .page-header{
 	margin: 71px 0 20px;
@@ -57,6 +67,8 @@ body{
 }
 .well{
 	padding:0px;
+	border:0px !important;
+	border-radius: 10px;
 }
 .picture img{
 	width:150%;
